--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div class="video-background">
         <video autoplay muted loop playsinline id="bg-video">
-            <source src="/assets/video/281154.mp4" type="video/mp4">
+            <source src="assets/video/281154.mp4" type="video/mp4">
             Browser Anda tidak mendukung video HTML5.
         </video>
         
